# cairo-lang

./: .bazelrc  .gitattributes  .gitignore  .gitmodules  BUILD  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  WORKSPACE  build.sh  disassembler.py  docker_common_deps.sh  helper.py  load_cairo_lang.bzl  package.json  pypy3.9_archive_build_file.bzl  vars.bzl
src/starkware/cairo/bootloaders/: BUILD  CMakeLists.txt  aggregator_utils.py  aggregator_utils_test.py  compute_fact.py  fact_topology.py  generate_fact.py  hash_program.py  program_hash_test_utils.cmake  program_hash_test_utils.py
src/starkware/cairo/bootloaders/applicative_bootloader/: BUILD  applicative_bootloader.cairo
src/starkware/cairo/bootloaders/bootloader/: BUILD  CMakeLists.txt  bootloader.cairo  constants.cairo  run_bootloader.cairo  supported_verifier_hashes.json
src/starkware/cairo/bootloaders/simple_bootloader/: BUILD  CMakeLists.txt  execute_task.cairo  run_simple_bootloader.cairo  simple_bootloader.cairo  verify_builtins.cairo
src/starkware/cairo/cairo_verifier/: BUILD  CMakeLists.txt  cairo_verifier_layout_program.bzl  cairo_verifier_layouts.bzl  objects.cairo
src/starkware/cairo/common/: BUILD  CMakeLists.txt  alloc.cairo  array_operations.cairo  bitwise.cairo  bool.cairo  cairo_builtins.cairo  cairo_function_runner.py  copy_indices.cairo  default_dict.cairo  dict.cairo  dict.py  dict_access.cairo  ec.cairo  ec_point.cairo  find_element.cairo  hash.cairo  hash_chain.cairo  hash_chain.py  hash_chain_test.py  hash_state.cairo  hash_state.py  hash_state_poseidon.cairo  invoke.cairo  keccak.cairo  keccak_state.cairo  log2_ceil.cairo  math.cairo  math_cmp.cairo  math_utils.py  memcpy.cairo  memset.cairo  merkle_multi_update.cairo  merkle_update.cairo  modulo.cairo  patricia.cairo  patricia_utils.cairo  patricia_utils.py  patricia_with_poseidon.cairo  patricia_with_sponge.cairo  (+19 more)
src/starkware/cairo/common/builtin_keccak/: BUILD  keccak.cairo
src/starkware/cairo/lang/: BUILD  CMakeLists.txt  VERSION  cairo_cmake_rules.cmake  cairo_constants.py  cairo_rules.bzl  create_cairo_lang_zip.py  dynamic_layout_params.py  helper.py  instances.py  lang.cmake  setup.py  version.py
src/starkware/starknet/: CMakeLists.txt  starknet_rules.bzl  starknet_rules_v0.bzl
src/starkware/starknet/builtins/: CMakeLists.txt
src/starkware/starknet/business_logic/: BUILD  CMakeLists.txt  execute_entry_point.py  execute_entry_point_base.py  internal_transaction.py  internal_transaction_interface.py  state.py  state_objects.py  transaction_execution_objects.py  transaction_fee.py  utils.py
src/starkware/starknet/cli/: BUILD  CMakeLists.txt  class_hash.py  reconstruct_starknet_traceback.py  reconstruct_starknet_traceback_test.py  starknet_cli.py  starknet_cli_utils.py
src/starkware/starknet/common/: BUILD  CMakeLists.txt  constants.cairo  eth_utils.cairo  eth_utils_test.py  messages.cairo  new_syscalls.cairo  storage.cairo  storage_test.py  syscalls.cairo
src/starkware/starknet/compiler/: BUILD  CMakeLists.txt  calldata_parser.py  calldata_parser_test.py  compile.py  compiler.cmake  conftest.py  contract_interface.py  contract_interface_test.py  data_encoder.py  data_encoder_test.py  event.py  event_test.py  external_wrapper.py  external_wrapper_test.py  starknet_cmake_rules.cmake  starknet_pass_manager.py  starknet_preprocessor.py  starknet_preprocessor_test.py  storage_var.py  storage_var_test.py  test_utils.py  validation_utils.py  validation_utils_test.py
src/starkware/starknet/core/: CMakeLists.txt
src/starkware/starknet/definitions/: BUILD  CMakeLists.txt  blockifier_types.py  chain_ids.py  constants.py  error_codes.py  fields.py  general_config.py  general_config.yml  overridable_versioned_constants.py  transaction_type.py  versioned_constants.json
src/starkware/starknet/eth/: CMakeLists.txt  IStarknetMessaging.sol  IStarknetMessagingEvents.sol  StarknetMessaging.sol
src/starkware/starknet/public/: CMakeLists.txt  abi.py  abi_structs.py  abi_test.py
src/starkware/starknet/scripts/: BUILD  CMakeLists.txt  starknet  starknet-class-hash  starknet-compile-deprecated
src/starkware/starknet/security/: BUILD  CMakeLists.txt  hints_whitelist.py  latest_whitelist_test.py  secure_hints.py  secure_hints_test.py  simple_references_test.py  starknet_common.cairo
src/starkware/starknet/services/: CMakeLists.txt
src/starkware/starknet/solidity/: BUILD  BlobHashGetter.sol  CMakeLists.txt  IStarknetMessaging.sol  IStarknetMessagingEvents.sol  Output.sol  Starknet.sol  StarknetGovernance.sol  StarknetMessaging.sol  StarknetOperator.sol  StarknetState.sol  solidity.cmake
src/starkware/starknet/storage/: BUILD  CMakeLists.txt  starknet_storage.py
src/starkware/starknet/testing/: BUILD  CMakeLists.txt  MockStarknetMessaging.sol  conftest.py  contract.py  contract_test.py  contract_utils.py  contracts.py  mock_starknet_messaging_test.py  objects.py  postman.py  postman_test.py  starknet.py  starknet_test.py  state.py  test.cairo  test_cairo1.cairo  test_unwhitelisted_hint.cairo  test_utils.py
src/starkware/starknet/utils/: CMakeLists.txt  api_utils.py
src/starkware/starknet/wallets/: BUILD  CMakeLists.txt  account.py  open_zeppelin.py  signer.py  starknet_context.py
src/starkware/starkware_utils/: BUILD  CMakeLists.txt  CMakeLists_common.txt  binary_fact_tree.py  binary_fact_tree_node.py  config_base.py  custom_raising_dict.py  error_handling.py  field_validators.py  marshmallow_dataclass_fields.py  marshmallow_fields_metadata.py  serializable.py  validated_dataclass.py  validated_fields.py  vars.bzl
src/starkware/starkware_utils/commitment_tree/: CMakeLists.txt  binary_fact_tree.py  binary_fact_tree_da_utils.py  binary_fact_tree_node.py  calculation.py  update_tree.py
src/starkware/starkware_utils/merkle_tree/: traverse_tree.py
src/starkware/starkware_utils/patricia_tree/: nodes.py  nodes_test.py  patricia_tree.py  virtual_patricia_node.py  virtual_patricia_node_test.py
src/starkware/starkware_utils/time/: CMakeLists.txt  fastforward.py  synchronous_executor.py  time.py
(+856 files in other folders)
