add_subdirectory(business_logic)
add_subdirectory(cli)
add_subdirectory(common)
add_subdirectory(compiler)
add_subdirectory(core)
add_subdirectory(definitions)
add_subdirectory(public)
add_subdirectory(scripts)
add_subdirectory(security)
add_subdirectory(services)
add_subdirectory(solidity)
add_subdirectory(storage)
add_subdirectory(testing)
add_subdirectory(third_party)
add_subdirectory(utils)
add_subdirectory(wallets)
